src/objects/SSU__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Emergency__c</fullName>
        <description>**Use following values to control Live Agent display on FAQ site. 
- To turn on during hours that are recognized as out of HOOP (or testing) - &apos;Turn On&apos; 
- To turn off during hours that are recognized as in HOOP - &apos;Turn Off&apos;</description>
        <inlineHelpText>**Use following values to control Live Agent display on FAQ site. 
- To turn on during hours that are recognized as out of HOOP (or testing) - &apos;Turn On&apos; 
- To turn off during hours that are recognized as in HOOP - &apos;Turn Off&apos;</inlineHelpText>
        <label>Live Agent Emergency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Support Site Utility</label>
</CustomObject>